# Semi_demo

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
Configs/: DocumentConf.json  InitObj.json  ItemConf.json  ItemEvenConf.json  NPCharaConf.json  TalkTextConf.json
Shaders/: Sprite.frag  Sprite.vert
lib/lib_osx/: libjsoncpp.dylib
lib/lib_win/: SDL2_ttf.lib
src/: Actor.cpp  Actor.h  BorderDecider.cpp  BorderDecider.h  Button.cpp  Button.h  ButtonEventComponent.cpp  ButtonEventComponent.h  CollisionComponent.cpp  CollisionComponent.h  Component.cpp  Component.h  Document.cpp  Document.h  Font.cpp  Font.h  GameSys.cpp  GameSys.h  Gear.cpp  Gear.h  House.cpp  House.h  InnerMap.cpp  InnerMap.h  InputComponent.cpp  InputComponent.h  Inventory.cpp  Inventory.h  Item.cpp  Item.h  ItemSys.cpp  ItemSys.h  Maps.cpp  Maps.h  MoveComponent.cpp  MoveComponent.h  NPCSys.cpp  NPCSys.h  NPChara.cpp  NPChara.h  (+31 more)
